2eme/LPO/jdbc_car/src/main/java/org/example/invalidCarException/CarInvalidInputException.java
package org.example.invalidCarException;

import jdk.jshell.JShell;

public class CarInvalidInputException extends BusinessException {
    public CarInvalidInputException() {
        super("Un champ est vide ou incorrect");
    }
}
